[gd_scene load_steps=8 format=3 uid="uid://nwlpc8nl72i8"]

[ext_resource type="Texture2D" uid="uid://cqbpyq532ek02" path="res://assets/textures/fire.png" id="1_hvt38"]
[ext_resource type="Script" path="res://objects/raft_objects/fire.gd" id="2_07v4s"]
[ext_resource type="Theme" uid="uid://b4i4qyx8hd1tk" path="res://assets/themes/ui_theme.tres" id="2_c5n6h"]
[ext_resource type="AudioStream" uid="uid://cy00b2n8c0qqk" path="res://assets/sfx/fire_burning.wav" id="4_xkvw5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pyftr"]
atlas = ExtResource("1_hvt38")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80vdf"]
atlas = ExtResource("1_hvt38")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uhwnt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyftr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80vdf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Fire" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_uhwnt")
autoplay = "default"
frame_progress = 0.789397
script = ExtResource("2_07v4s")
is_interactable = true

[node name="fire_damage_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="fire_fix_meter" type="ProgressBar" parent="."]
visible = false
z_index = 100
offset_left = -16.0
offset_top = 17.0
offset_right = 16.0
offset_bottom = 22.0
theme = ExtResource("2_c5n6h")
max_value = 150.0
value = 150.0
show_percentage = false

[node name="smoke_added_timer" type="Timer" parent="."]
wait_time = 0.175
autostart = true

[node name="fire_burning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xkvw5")
volume_db = -10.0
autoplay = true

[connection signal="timeout" from="fire_damage_timer" to="." method="_on_fire_damage_timer_timeout"]
[connection signal="timeout" from="smoke_added_timer" to="." method="_on_smoke_added_timer_timeout"]
